--- a/website/templates/nav.html
+++ b/website/templates/nav.html
@@ -7,11 +7,11 @@
         <li>
             <span class="opener">Events</span>
             <ul>
-                <li><a href="{{ url_for('events.events') }}">Upcoming Events</a></li>
+                <li><a href="{{ url_for('events.upcoming_events') }}">Upcoming Events</a></li>
                 <li><a href="{{ url_for('events.past_events') }}">Past Events</a></li>
             </ul>
         </li>
-        <li><a href="{{ url_for('core.'student_news) }}"></a>Student News</li>
+        <li><a href="{{ url_for('core.student_news') }}"></a>Student News</li>
         <li>
             <span class="opener">Research</span>
             <ul>
