--- a/website/templates/components/nav.html
+++ b/website/templates/components/nav.html
@@ -3,7 +3,7 @@
         <h2>Menu</h2>
     </header>
     <ul>
-        <li><a href="{{ url_for('core.home') }}">Homepage</a></li>
+        <li><a href="{{ url_for('home') }}">Homepage</a></li>
         <li>
             <span class="opener">Events</span>
             <ul>
@@ -11,26 +11,26 @@
                 <li><a href="{{ url_for('events.past_events') }}">Past Events</a></li>
             </ul>
         </li>
-        <li><a href="{{ url_for('core.student_news') }}"></a>Student News</li>
+        <li><a href="{{ url_for('student_news') }}"></a>Student News</li>
         <li>
             <span class="opener">Research</span>
             <ul>
-                <li><a href="{{ url_for('current_undergrad_projects') }}">Current
+                <li><a href="{{ url_for('reserach.current_undergrad_projects') }}">Current
                         Undergraduate Projects</a></li>
-                <li><a href="{{ url_for('former_undergrad_projects') }}">Former
+                <li><a href="{{ url_for('research.former_undergrad_projects') }}">Former
                         Undergraduate Projects</a></li>
-                <li><a href="{{ url_for('other_research_projects') }}">Other Projects</a>
+                <li><a href="{{ url_for('research.other_research_projects') }}">Other Projects</a>
                 </li>
             </ul>
         </li>
         <li>
             <span class="opener">Mentorship Groups</span>
             <ul>
-                <li><a href="{{ url_for('mentor_groups_math') }}">For Mathematics</a></li>
-                <li><a href="{{ url_for('mentor_groups_stan') }}">For Stan State
+                <li><a href="{{ url_for('groups.mentor_groups_math') }}">For Mathematics</a></li>
+                <li><a href="{{ url_for('groups.mentor_groups_stan') }}">For Stan State
                         Students</a></li>
             </ul>
         </li>
-        <li><a href="{{ url_for('core.about') }}">About Me</a></li>
+        <li><a href="{{ url_for('about') }}">About Me</a></li>
     </ul>
 </nav>
