use `.j2` extension for template files
- take advantage of jinja linting
- more easily identify template files.

--- a/website/templates/404.j2
+++ b/website/templates/404.j2
@@ -1,6 +1,4 @@
-<!-- This HTML file creates a 404 exception for error handling -->
-
-{% extends "base.html" %}
+{% extends "base.j2" %}
 
 {% block title %}404 Page Not Found{% endblock %}
 
