--- a/website/templates/about_me.j2
+++ b/website/templates/about_me.j2
@@ -1,6 +1,6 @@
-{% extends "layout/base.html" %}
+{% extends "layout/base.j2" %}
 
-{% block title % }About Me{% endblock %}
+{% block title %}About Me{% endblock %}
 
 {% block main_content %}
 
