fix typo & update current undergrad abstract page

--- a/website/groups/templates/mentor_groups_stan.j2
+++ b/website/groups/templates/mentor_groups_stan.j2
@@ -1,6 +1,6 @@
 {% extends "layout/base.j2" %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Mentorship Groups at Stan State{% endblock %}
 
 {% block main_content %}
 
