convert research pages to jinja templates

--- a/website/research/templates/current_ugrad_projects_abstract.j2
+++ b/website/research/templates/current_ugrad_projects_abstract.j2
@@ -100,7 +100,7 @@
         </article>
         <article>
             <a class="image"><img src="{{ url_for('static', filename='images/sherlyandaaron.png') }}"
-                    alt="Abstract pattern created by various colors of yarn." /></a>
+                    alt="Tables and charts containing a sample of course enrollment numbers, average class size, and full-time equivalent students taught." /></a>
             <h3>Predictive Modeling of Mathematics Course Enrollment and Success</h3>
             <h4>Students: Aaron & Sherly<br>Majors: Mathematics</h4>
             <p>We our working with Stan State's <a href="https://www.csustan.edu/iea" target="_blank"
