--- a/website/templates/layout/base.j2
+++ b/website/templates/layout/base.j2
@@ -39,7 +39,7 @@
                 <div id="inner">
 
                     <!-- Header -->
-                    {% include "component/header.j2" %}
+                    {% include "components/header.j2" %}
 
                     <!-- Main Content -->
                     {% block main_content %} {% endblock %}
@@ -48,7 +48,7 @@
             </div>
 
             <!-- Sidebar -->
-            {% include "component/sidebar.j2" %}
+            {% include "components/sidebar.j2" %}
 
         </div>
 
