--- a/website/research/templates/former_ugrad_projects.j2
+++ b/website/research/templates/former_ugrad_projects.j2
@@ -23,7 +23,8 @@
                 campus. Our data suggests that you may be late for you next class if you are a slow walker or if walking
                 paths are congested.</p>
             <ul class="actions">
-                <li><a href="{{ url_for('research.walking_time_poster') }}" class="button">POSTER</a></li>
+                <li><a href="{{ url_for('research.project', project_name='walking_time_poster') }}"
+                        class="button">POSTER</a></li>
             </ul>
         </article>
         <article>
