--- a/website/templates/components/sidebar.j2
+++ b/website/templates/components/sidebar.j2
@@ -2,7 +2,7 @@
     <div class="inner">
 
         <!-- Menu -->
-        {% include "nav.j2" %}
+        {% include "components/nav.j2" %}
 
         <!-- Section -->
         <section>
@@ -17,7 +17,7 @@
         </section>
 
         <!-- Footer -->
-        {% include "footer.j2" %}
+        {% include "components/footer.j2" %}
 
     </div>
 </div>
