--- a/website/templates/student_news.j2
+++ b/website/templates/student_news.j2
@@ -1,8 +1,8 @@
-{% extends "layout/base.html" %}
+{% extends "layout/base.j2" %}
 
 {% block title %}Student News{% endblock %}
 
-{% blcok main_content %}
+{% block main_content %}
 
 <section>
     <header class="major">
