--- a/website/research/templates/current_ugrad_projects.j2
+++ b/website/research/templates/current_ugrad_projects.j2
@@ -23,7 +23,8 @@
             <p>This project is part of the Stan State <a href="https://www.csustan.edu/honors" target="_blank"
                     rel="noreferrer noopener external" alt="(opens in new tab)">Honors</a> program.</p>
             <ul class="actions">
-                <li><a href="{{ url_for('research.ev_charging_poster') }}" class="button">POSTER</a></li>
+                <li><a href="{{ url_for('research.project', project_name='ev_charging_poster') }}"
+                        class="button">POSTER</a></li>
             </ul>
         </article>
         <article>
