--- a/website/research/templates/current_ugrad_projects_abstracts.j2
+++ b/website/research/templates/current_ugrad_projects_abstracts.j2
@@ -99,7 +99,7 @@
             </ul>
         </article>
         <article>
-            <a class="image"><img src="{{ url_for('static', filename='images/sherlyandaaron.png') }}"
+            <a class="image"><img src="{{ url_for('static', filename='images/shirleyandaaron.png') }}"
                     alt="Tables and charts containing a sample of course enrollment numbers, average class size, and full-time equivalent students taught." /></a>
             <h3>Predictive Modeling of Mathematics Course Enrollment and Success</h3>
             <h4>Students: Aaron & Sherly<br>Majors: Mathematics</h4>
