--- a/website/templates/layout/base.j2
+++ b/website/templates/layout/base.j2
@@ -36,7 +36,7 @@
 
             <!-- Main -->
             <div id="main">
-                <div id="inner">
+                <div class="inner">
 
                     <!-- Header -->
                     {% include "components/header.j2" %}
