--- a/website/research/templates/ev_charging_poster.j2
+++ b/website/research/templates/ev_charging_poster.j2
@@ -5,7 +5,8 @@
 {% block main_content %}
 
 <section>
-    <embed src="images/ev_charging_poster.pdf" width=100% height=1000px alt="(PDF File)">
+    <embed src="{{ url_for('static', filename='images/ev_charging_poster.pdf') }}" width=100% height=1000px
+        alt="(PDF File)">
 </section>
 
 {% endblock %}
