--- a/website/templates/components/nav.j2
+++ b/website/templates/components/nav.j2
@@ -11,7 +11,7 @@
                 <li><a href="{{ url_for('events.past_events') }}">Past Events</a></li>
             </ul>
         </li>
-        <li><a href="{{ url_for('core.student_news') }}"></a>Student News</li>
+        <li><a href="{{ url_for('core.student_news') }}">Student News</a></li>
         <li>
             <span class="opener">Research</span>
             <ul>
