--- a/website/research/templates/former_ugrad_projects.j2
+++ b/website/research/templates/former_ugrad_projects.j2
@@ -122,8 +122,8 @@
                     rel="noreferrer noopener external" alt="(opens in new tab)">SERSCA</a> program.
             </p>
             <ul class="actions">
-                <li><a href="current_ugrad_projects_abstract.html" target="_blank" rel="noreferrer noopener external"
-                        alt="(opens in new tab)" class="button">Abstract</a></li>
+                <li><a href="{{ url_for('research.current_undergrad_abstracts') }}" class="button">Abstract</a>
+                </li>
             </ul>
         </article>
         <article>
