update research submodule
- research projects now have their own template file.

This allows for an easier time to move content from the `Current Undergrad Projects` page to `Former Undergrad Projects` page by updating the `project_posts` variable in the respective Jinja file.

--- a/website/events/templates/past_events.j2
+++ b/website/events/templates/past_events.j2
@@ -94,12 +94,12 @@
                 <tr>
                     <td>03/03/2021</td>
                     <td><a href="http://www.timhsu.net/colloq/" target="_blank" rel="noreferrer noopener external"
-                            alt="(opens in new tab)">San Jose State Mathematics Department Colloquium</a><br>
+                            alt="(opens in new tab)">San Jose State Mathematics Department Colloquium</a><br />
                         This was a fun colloquium, catching up with friends I met during my job search process!</td>
                 </tr>
                 <tr>
                     <td>02/11/2021</td>
-                    <td>NSF Proposal Submitted!<br>
+                    <td>NSF Proposal Submitted!<br />
                         I submitted my first NSF proposal as a PI with a group of fantastic co-PIs. Shoutout to Dr.'s
                         Roummel Marcia, Erica Rutter, Mario Banuelos, and Luca Brillante for helping make this happen.
                     </td>
@@ -108,7 +108,7 @@
                     <td>01/07/2021</td>
                     <td><a href="http://jointmathematicsmeetings.org/meetings/national/jmm2021/2247_intro"
                             target="_blank" rel="noreferrer noopener external" alt="(opens in new tab)">Joint
-                            Mathematics Meetings</a><br>
+                            Mathematics Meetings</a><br />
                         <b>AMS Special Session:</b> If You Build It They Will Come<br />
                         Presentations by Scholars in the National Alliance for Doctoral Studies in the Mathematical
                         Sciences
