--- a/website/research/templates/current_ugrad_projects_abstracts.j2
+++ b/website/research/templates/current_ugrad_projects_abstracts.j2
@@ -10,7 +10,7 @@
             <a class="image"><img src="{{ url_for('static', filename='images/darcyandjuan.png') }}"
                     alt="Abstract image of a circle with overlapping shapes." /></a>
             <h3>Hypergraph-Based Image Segmentation</h3>
-            <h4>Students: Darcy & Juan<br>Majors: Mathematics</h4>
+            <h4>Students: Darcy & Juan<br />Majors: Mathematics</h4>
             <p>During the summer of 2020, we had the opportunity to participate in the <a
                     href="https://science.osti.gov/wdts/vfp" target="_blank" rel="noreferrer noopener external"
                     alt="(opens in new tab)">Visiting Faculty Program (VFP)</a> at Lawrence Berkeley National
@@ -44,7 +44,7 @@
             <a class="image"><img src="{{ url_for('static', filename='images/andrewandjasmin.jpg') }}"
                     alt="HTML file open in a text editor." /></a>
             <h3>Mean-Shift Clustering in C++</h3>
-            <h4>Students: Andrew & Jasmin<br>Majors: Computer Science & Mathematics</h4>
+            <h4>Students: Andrew & Jasmin<br />Majors: Computer Science & Mathematics</h4>
             <p>In the VFP image segmentation algorithm, we applied the k-means clustering algorithm to create the
                 hypergraph model for the image. In other hypergraph-based segmentation algorithms, mean-shift clustering
                 also produced great results. However, we did not find a suitable C++ implementation of the mean-shift
@@ -59,8 +59,8 @@
             <a class="image"><img src="{{ url_for('static', filename='images/kevin.jpg') }}"
                     alt="Person holding a smartphone with the Pokemon Go application open." /></a>
             <h3>Pokemon GO! PVP Optimization</h3>
-            <h4>Co-Advisor: Dr. Jon Brown (Bakersfield College)<br>
-                Students: Kevin, Pablo (BC), Ed (BC)<br>Majors: Computer Science</h4>
+            <h4>Co-Advisor: Dr. Jon Brown (Bakersfield College)<br />
+                Students: Kevin, Pablo (BC), Ed (BC)<br />Majors: Computer Science</h4>
             <p>This project was brought to us by Dr. Brown from Bakersfield College who I met through the <a
                     href="https://www.pacificmathalliance.org/" target="_blank" rel="noreferrer noopener external"
                     alt="(opens in new tab)">Pacific Math Alliance</a>. Funny enough, Dr. Brown is also an alumnus from
@@ -80,7 +80,7 @@
             <a class="image"><img src="{{ url_for('static', filename='images/jesselynn.png') }}"
                     alt="Migration pattern of Zebrafish embryo." /></a>
             <h3>Modeling Embryo Cell Migration and Adhesion</h3>
-            <h4>Student: Jesselynn<br>Major: Mathematics</h4>
+            <h4>Student: Jesselynn<br />Major: Mathematics</h4>
             <p>In this collaboration, I have had so much fun learning about cellular biology from Jesselynn. Jesselynn
                 is a Lab Assistant in Dr. Stephanie Woo's lab at UC Merced while being a full-time math major at Stan
                 State. In the Woo Lab, Jesselynn captures videos of zebrafish embryo cells migrating to uniformly spread
@@ -99,7 +99,7 @@
             <a class="image"><img src="{{ url_for('static', filename='images/shirleyandaaron.png') }}"
                     alt="Tables and charts containing a sample of course enrollment numbers, average class size, and full-time equivalent students taught." /></a>
             <h3>Predictive Modeling of Mathematics Course Enrollment and Success</h3>
-            <h4>Students: Aaron & Sherly<br>Majors: Mathematics</h4>
+            <h4>Students: Aaron & Sherly<br />Majors: Mathematics</h4>
             <p>We our working with Stan State's <a href="https://www.csustan.edu/iea" target="_blank"
                     rel="noreferrer noopener external" alt="(opens in new tab)">Institutional Effectiveness and
                     Analytics (IEA)</a> team to study recent trends in our mathematics major courses. In recent
@@ -121,7 +121,7 @@
             <a class="image"><img src="{{ url_for('static', filename='images/rommell.jpg') }}"
                     alt="Runner with a baton on crouching on a track at the starting line." /></a>
             <h3>Predictive Modeling of Track Performances</h3>
-            <h4>Student: Rommell<br>Major: Physics</h4>
+            <h4>Student: Rommell<br />Major: Physics</h4>
             <p>Rommell has a passion for running track, he was an all-star athlete in high school and even competed on
                 Stan State's track team. Using data from <a href="athletic.net" target="_blank"
                     rel="noreferrer noopener external" alt="(opens in new tab)">Athletic.net</a>, we are analyzing how
