--- a/website/research/templates/current_ugrad_projects.j2
+++ b/website/research/templates/current_ugrad_projects.j2
@@ -24,7 +24,7 @@ NOTE: The `projects` directory shares projects from current and former students.
     <div class="posts">
 
         {% for project in project_posts %}
-        {% include "posts/{}.j2".format(project) %}
+        {% include "projects/{}.j2".format(project) %}
         {% endfor %}
 
     </div>
