update undergrad project pages
- set proper headings
- prepare page for auto populated content

--- a/website/research/templates/former_ugrad_projects.j2
+++ b/website/research/templates/former_ugrad_projects.j2
@@ -3,13 +3,15 @@
 {% block main_content %}
 <section>
     <header class="major">
-        <h2>Former Undergraduate Projects</h2>
+        <h1>Former Undergraduate Projects</h1>
     </header>
     <div class="posts">
 
         {% if project_names %}
         {% for project in project_names %}
-        {% include "projects/{}.j2".format(project) %}
+        <article>
+            {% include "projects/{}.j2".format(project) %}
+        </article>
         {% endfor %}
         {% endif %}
 
