update heading CSS
Update the style of the page headings to match the original site without sacrificing semantic structure of the generated HTML document.

--- a/website/research/templates/former_ugrad_projects.j2
+++ b/website/research/templates/former_ugrad_projects.j2
@@ -3,7 +3,7 @@
 {% block main_content %}
 <section>
     <header class="major">
-        <h1>Former Undergraduate Projects</h1>
+        <h1 class="h2">Former Undergraduate Projects</h1>
     </header>
     <div class="posts">
 
