--- a/website/research/templates/projects/TEMPLATE.j2
+++ b/website/research/templates/projects/TEMPLATE.j2
@@ -1,8 +1,8 @@
 <a class="image"><img src="{{ url_for('static', filename='images/....png') }}" alt="..." /></a>
-<h2>Project name</h2>
-<h3>Advisor: Project advisor(s)</h3>
-<h3>Student: Student(s) working on the project</h3>
-<h4>Major: Student(s) major(s)</h4>
+<h2 class='h3'>Project name</h2>
+<h3 class='h4'>Advisor: Project advisor(s)</h3>
+<h3 class='h4'>Student: Student(s) working on the project</h3>
+<h4 class='h5'>Major: Student(s) major(s)</h4>
 <p>Project description/abstract</p>
 <!-- delete this line to add a button
 <ul class="actions">
