--- a/website/research/templates/current_ugrad_projects.j2
+++ b/website/research/templates/current_ugrad_projects.j2
@@ -3,7 +3,7 @@
 {% block main_content %}
 <section>
     <header class="major">
-        <h1>Current Undergraduate Projects</h1>
+        <h1 class="h2">Current Undergraduate Projects</h1>
     </header>
     <div class="posts">
 
