--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -141,39 +141,39 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     border-bottom: 0; }
 
-h1 {
+h1, .h1 {
   font-size: 4em;
   margin: 0 0 0.5em 0;
   line-height: 1.3; }
 
-h2 {
+h2, .h2 {
   font-size: 1.75em; }
 
-h3 {
+h3, .h3 {
   font-size: 1.25em; }
 
-h4 {
+h4, .h4 {
   font-size: 1.1em; }
 
-h5 {
+h5, .h5 {
   font-size: 0.9em; }
 
-h6 {
+h6, .h6 {
   font-size: 0.7em; }
 
 @media screen and (max-width: 1680px) {
-  h1 {
+  h1, .h1 {
     font-size: 3.5em; } }
 
 @media screen and (max-width: 980px) {
-  h1 {
+  h1, .h1 {
     font-size: 3.25em; } }
 
 @media screen and (max-width: 736px) {
-  h1 {
+  h1, .h1 {
     font-size: 2em;
     line-height: 1.4; }
-  h2 {
+  h2, .h2 {
     font-size: 1.5em; } }
 
 sub {
